--- a/A_dbms/templates/dbms/agree/agree-scan.html
+++ b/A_dbms/templates/dbms/agree/agree-scan.html
@@ -8,9 +8,11 @@
         {% include 'dbms/agree/scan/agree-summry.html' %}
         {% include 'dbms/agree/scan/agree-tab.html' %}
         {% include 'dbms/agree/modl/counter-add-mod.html' %}
+        {% include 'dbms/agree/modl/agree-sign-mod.html' %}
     </div>
 {% endblock %}
 
 {% block extra-js %}
     {% include 'dbms/agree/extra/js-counter-add.html' %}
+    {% include 'dbms/agree/extra/js-agree-sign.html' %}
 {% endblock %}
