--- a/A_dbms/templates/dbms/article/scan/article-tab.html
+++ b/A_dbms/templates/dbms/article/scan/article-tab.html
@@ -27,9 +27,11 @@
         <div role="tabpanel" class="tab-pane" id="meeting"> <!--评审会-->
             {% include 'dbms/article/scan/tab/meeting.html' %} </div>
         <div role="tabpanel" class="tab-pane" id="comment"> <!--评审意见-->
-            {% include 'dbms/article/scan/tab/comment.html' %} </div>
+            {% include 'dbms/appraisal/scan/tab/comment.html' %} </div>
+        <div role="tabpanel" class="tab-pane" id="sign"> <!--签批情况-->
+            {% include 'dbms/appraisal/scan/tab/sign.html' %} </div>
         <div role="tabpanel" class="tab-pane" id="single"> <!--单项额度-->
-            {% include 'dbms/article/scan/tab/single.html' %} </div>
+            {% include 'dbms/appraisal/scan/tab/single.html' %} </div>
         <div role="tabpanel" class="tab-pane active" id="lenging"> <!--分笔发放-->
             {% include 'dbms/article/scan/tab/lending.html' %} </div>
     </div>
