--- a/A_dbms/templates/dbms/meeting/modl/expert-allot-del-mod.html
+++ b/A_dbms/templates/dbms/meeting/modl/expert-allot-del-mod.html
@@ -3,8 +3,7 @@
     <div class="modal-dialog modal-sm" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title" id="delExpertAllotModalLabel">
-                    取消评委
+                <h4 class="modal-title" id="delExpertAllotModalLabel">取消评委
                     <input style="display: none" name="article_id" value="{{ article_obj.id }}">
                     <input style="display: none" name="expert_id" id="delExpertAllotId">
                 </h4>
