--- a/A_dbms/templates/dbms/provide/provide/provide-filter.html
+++ b/A_dbms/templates/dbms/provide/provide/provide-filter.html
@@ -1,24 +1,19 @@
 <div>
     <label>
         {% if kwargs.provide_status == None %}
-            <a class="btn btn-primary btn-sm active"
-               href="{% url 'dbms:provide_all' %}">全部</a>
+            <a class="btn btn-primary btn-sm active" href="{% url 'dbms:provide_all' %}">全部</a>
         {% else %}
-            <a class="btn btn-primary btn-sm"
-               href="{% url 'dbms:provide_all' %}">全部</a>
+            <a class="btn btn-primary btn-sm" href="{% url 'dbms:provide_all' %}">全部</a>
         {% endif %}
 
         {# 方式一：#}
         {% for provide_status in provide_status_list %}
             {% if provide_status.0 == kwargs.provide_status %}
                 <a class="btn btn-primary btn-sm active"
-                   href="{% url 'dbms:provide' provide_status=provide_status.0 %}">
-                    {{ provide_status.1 }}</a>
+                   href="{% url 'dbms:provide' provide_status=provide_status.0 %}">{{ provide_status.1 }}</a>
             {% else %}
                 <a class="btn btn-primary btn-sm"
-                   href="{% url 'dbms:provide' provide_status=provide_status.0 %}">
-                    {{ provide_status.1 }} </a>
-
+                   href="{% url 'dbms:provide' provide_status=provide_status.0 %}">{{ provide_status.1 }} </a>
             {% endif %}
         {% endfor %}
     </label>
