--- a/A_dbms/templates/dbms/review/review/review-filter.html
+++ b/A_dbms/templates/dbms/review/review/review-filter.html
@@ -1,11 +1,8 @@
 <div>
     <label>
         <form class="navbar-form" style="display: inline">
-            <input type="text" class="form-control"
-                   placeholder="搜索客户">
-            <button type="submit" class="btn btn-primary btn-sm">
-                搜索
-            </button>
+            <input type="text" class="form-control" placeholder="搜索客户">
+            <button type="submit" class="btn btn-primary btn-sm">搜索</button>
         </form>
     </label>
 </div>
