--- a/A_dbms/templates/dbms/warrant/modl/mod_form/chattel-add-edit.html
+++ b/A_dbms/templates/dbms/warrant/modl/mod_form/chattel-add-edit.html
@@ -1,22 +1,22 @@
 <div id="form_chattel_add_eidt" class="warrant-extend" style="display: none">
 
     <div class="form-group"><!--动产所有人-->
-        <label for="id_chattel_owner" class="col-sm-3 control-label">
-            {{ form_chattel_add_eidt.chattel_owner.label }}：</label>
+        <label for="id_chattel_owner"
+               class="col-sm-3 control-label">{{ form_chattel_add_eidt.chattel_owner.label }}：</label>
         <div class="col-sm-9">{{ form_chattel_add_eidt.chattel_owner }}</div>
         <label id="e_chattel_owner" class="pull-right">{{ form_chattel_add_eidt.chattel_owner.errors }}</label>
     </div>
 
     <div class="form-group"><!--动产类型-->
-        <label for="id_chattel_typ" class="col-sm-3 control-label">
-            {{ form_chattel_add_eidt.chattel_typ.label }}：</label>
+        <label for="id_chattel_typ"
+               class="col-sm-3 control-label">{{ form_chattel_add_eidt.chattel_typ.label }}：</label>
         <div class="col-sm-9">{{ form_chattel_add_eidt.chattel_typ }}</div>
         <label id="e_chattel_typ" class="pull-right">{{ form_chattel_add_eidt.chattel_typ.errors }}</label>
     </div>
 
     <div class="form-group"><!--动产描述-->
-        <label for="id_chattel_detail" class="col-sm-3 control-label">
-            {{ form_chattel_add_eidt.chattel_detail.label }}：</label>
+        <label for="id_chattel_detail"
+               class="col-sm-3 control-label">{{ form_chattel_add_eidt.chattel_detail.label }}：</label>
         <div class="col-sm-9">{{ form_chattel_add_eidt.chattel_detail }}</div>
         <label id="e_chattel_detail" class="pull-right">{{ form_chattel_add_eidt.chattel_detail.errors }}</label>
     </div>
