--- a/A_dbms/templates/dbms/warrant/modl/mod_form/draft-add-edit.html
+++ b/A_dbms/templates/dbms/warrant/modl/mod_form/draft-add-edit.html
@@ -1,22 +1,20 @@
 <div id="form_draft_add_eidt" class="warrant-extend" style="display: none">
 
     <div class="form-group"><!--所有者-->
-        <label for="id_draft_owner" class="col-sm-3 control-label">
-            {{ form_draft_add_eidt.draft_owner.label }}：</label>
+        <label for="id_draft_owner" class="col-sm-3 control-label">{{ form_draft_add_eidt.draft_owner.label }}：</label>
         <div class="col-sm-9">{{ form_draft_add_eidt.draft_owner }}</div>
         <label id="e_draft_owner" class="pull-right">{{ form_draft_add_eidt.draft_owner.errors }}</label>
     </div>
 
     <div class="form-group"><!--票据类型-->
-        <label for="id_draft_typ" class="col-sm-3 control-label">
-            {{ form_draft_add_eidt.draft_typ.label }}：</label>
+        <label for="id_draft_typ" class="col-sm-3 control-label">{{ form_draft_add_eidt.draft_typ.label }}：</label>
         <div class="col-sm-9">{{ form_draft_add_eidt.draft_typ }}</div>
         <label id="e_draft_typ" class="pull-right">{{ form_draft_add_eidt.draft_typ.errors }}</label>
     </div>
 
     <div class="form-group"><!--票据描述-->
-        <label for="id_draft_detail" class="col-sm-3 control-label">
-            {{ form_draft_add_eidt.draft_detail.label }}：</label>
+        <label for="id_draft_detail"
+               class="col-sm-3 control-label">{{ form_draft_add_eidt.draft_detail.label }}：</label>
         <div class="col-sm-9">{{ form_draft_add_eidt.draft_detail }}</div>
         <label id="e_draft_detaile" class="pull-right">{{ form_draft_add_eidt.draft_detail.errors }}</label>
     </div>
