--- a/A_dbms/templates/dbms/warrant/modl/mod_form/ground-add-edit.html
+++ b/A_dbms/templates/dbms/warrant/modl/mod_form/ground-add-edit.html
@@ -1,8 +1,7 @@
 <div id="form_ground_add_edit" class="warrant-extend" style="display: none">
 
     <div class="form-group"><!--土地坐落-->
-        <label for="id_ground_locate" class="col-sm-3 control-label">
-            {{ form_ground_add_edit.ground_locate.label }}：
+        <label for="id_ground_locate" class="col-sm-3 control-label">{{ form_ground_add_edit.ground_locate.label }}：
         </label>
         <div class="col-sm-9">
             {{ form_ground_add_edit.ground_locate }}
