--- a/A_dbms/templates/dbms/warrant/modl/mod_form/house-add-edit.html
+++ b/A_dbms/templates/dbms/warrant/modl/mod_form/house-add-edit.html
@@ -1,39 +1,22 @@
 <div id="form_house_add_edit" class="warrant-extend" style="display: none">
 
     <div class="form-group"><!--坐落-->
-        <label for="id_house_locate" class="col-sm-3 control-label">
-            {{ form_house_add_edit.house_locate.label }}：
-        </label>
-        <div class="col-sm-9">
-            {{ form_house_add_edit.house_locate }}
-        </div>
-        <label id="e_house_locate" class="pull-right">
-            {{ form_house_add_edit.house_locate.errors }}
-        </label>
+        <label for="id_house_locate"
+               class="col-sm-3 control-label">{{ form_house_add_edit.house_locate.label }}：</label>
+        <div class="col-sm-9">{{ form_house_add_edit.house_locate }}</div>
+        <label id="e_house_locate" class="pull-right">{{ form_house_add_edit.house_locate.errors }}</label>
     </div>
 
     <div class="form-group"><!--用途-->
-        <label for="id_house_app" class="col-sm-3 control-label">
-            {{ form_house_add_edit.house_app.label }}：
-        </label>
-        <div class="col-sm-9">
-            {{ form_house_add_edit.house_app }}
-        </div>
-        <label id="e_house_app" class="pull-right">
-            {{ form_house_add_edit.house_app.errors }}
-        </label>
+        <label for="id_house_app" class="col-sm-3 control-label">{{ form_house_add_edit.house_app.label }}：</label>
+        <div class="col-sm-9">{{ form_house_add_edit.house_app }}</div>
+        <label id="e_house_app" class="pull-right">{{ form_house_add_edit.house_app.errors }}</label>
     </div>
 
     <div class="form-group"><!--建筑面积（平方米)-->
-        <label for="id_house_area" class="col-sm-3 control-label">
-            {{ form_house_add_edit.house_area.label }}：
-        </label>
-        <div class="col-sm-9">
-            {{ form_house_add_edit.house_area }}
-        </div>
-        <label id="e_house_area" class="pull-right">
-            {{ form_house_add_edit.house_area.errors }}
-        </label>
+        <label for="id_house_area" class="col-sm-3 control-label">{{ form_house_add_edit.house_area.label }}：</label>
+        <div class="col-sm-9">{{ form_house_add_edit.house_area }}</div>
+        <label id="e_house_area" class="pull-right">{{ form_house_add_edit.house_area.errors }}</label>
     </div>
 
 </div>
