--- a/A_dbms/templates/dbms/warrant/scan/warrant_tab/guaranty.html
+++ b/A_dbms/templates/dbms/warrant/scan/warrant_tab/guaranty.html
@@ -20,11 +20,7 @@
                 <td>{{ warrant.warrant_num }}</td>
                 <td>{{ warrant.get_warrant_typ_display }}</td>
                 <td>{{ warrant.get_warrant_state_display }}</td>
-                <td>
-                    <a class="btn btn-danger btn-xs delGuarantyB">
-                        删除
-                    </a>
-                </td>
+                <td><a class="btn btn-danger btn-xs delGuarantyB">删除</a></td>
             </tr>
         {% endfor %}
         </tbody>
