--- a/A_dbms/templates/dbms/warrant/scan/warrant_tab/storages.html
+++ b/A_dbms/templates/dbms/warrant/scan/warrant_tab/storages.html
@@ -22,11 +22,7 @@
                 <td>{{ storage.storage_date }}</td>
                 <td>{{ storage.conservator.name }}</td>
                 <td>{{ storage.transfer.name }}</td>
-                <td>
-                    <a class="btn btn-danger btn-xs delStorageB">
-                        删除
-                    </a>
-                </td>
+                <td><a class="btn btn-danger btn-xs delStorageB">删除</a></td>
             </tr>
         {% endfor %}
         </tbody>
