--- a/A_dbms/templates/dbms/agree/counter/tab/counter-guarantee.html
+++ b/A_dbms/templates/dbms/agree/counter/tab/counter-guarantee.html
@@ -1,11 +1,5 @@
 <div class="table-responsive">
-    {#"table-responsive":表格响应式布局#}
-    <table class="table table-bordered table-hover
-                table-condensed active">
-        {#"table-bordered":表格表格边框#}
-        {#"table-hover":表格悬停变色#}
-        {#"table-condensed":表格紧缩#}
-        {#<caption><h4>项目管理</h4></caption>#}
+    <table class="table table-bordered table-hover table-condensed active">
         <thead>
         <tr style="text-align: center">
             <th>担保方式</th>
@@ -17,7 +11,6 @@
             {% if lending_operate %}
                 <th>操作</th>
             {% endif %}
-
         </tr>
         </thead>
         <tbody class="guarantee-tb">
