--- a/A_dbms/templates/dbms/agree/modl/agree-sign-mod.html
+++ b/A_dbms/templates/dbms/agree/modl/agree-sign-mod.html
@@ -1,22 +1,23 @@
-<div class="modal fade" id="addAgreeModal" tabindex="-1"
-     role="dialog" aria-labelledby="addAgreeModal">
+<div class="modal fade" id="agreeSingModal" tabindex="-1"
+     role="dialog" aria-labelledby="agreeSingModal">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
-                <h4 class="modal-title" id="addAgreeModalLabel">添加委托合同</h4>
+                <h4 class="modal-title" id="agreeSingModalLabel">合同签批：{{ agree_obj.agree_num }}
+                    <input style="display: none" name="agree_id" value="{{ agree_obj.id }}"></h4>
             </div>
             <div class="modal-body">
                 <form class="form-horizontal">
-                    {% include 'dbms/agree/modl/mod_form/agree-add-edit.html' %}
+                    {% include 'dbms/agree/modl/mod_form/agree-sign.html' %}
                 </form>
             </div>
             <label id="formErrors"></label>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                <button type="button" class="btn btn-primary" id="addAgreeModalOk">确定</button>
+                <button type="button" class="btn btn-primary" id="agreeSingModalOk">确定</button>
             </div>
         </div>
     </div>
