--- a/A_dbms/templates/dbms/appraisal/lending/tab/counter-house.html
+++ b/A_dbms/templates/dbms/appraisal/lending/tab/counter-house.html
@@ -13,7 +13,7 @@
             <th>房产地址</th>
             <th>房产用途</th>
             <th>房产面积</th>
-            {% if lending_operate %}
+            {% if counter_operate %}
                 <th>操作</th>
             {% endif %}
 
@@ -29,7 +29,7 @@
                         <td>{{ warrant.house_warrant.house_locate }}</td>
                         <td>{{ warrant.house_warrant.get_house_app_display }}</td>
                         <td>{{ warrant.house_warrant.house_area }}</td>
-                        {% if lending_operate %}
+                        {% if counter_operate %}
                             <td><a class="btn btn-danger btn-xs delGuaranteeB">删除</a></td>
                         {% endif %}
                     </tr>
