--- a/A_dbms/templates/dbms/meeting/modl/expert-allot-add-mod.html
+++ b/A_dbms/templates/dbms/meeting/modl/expert-allot-add-mod.html
@@ -6,8 +6,7 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
-                <h4 class="modal-title" id="allotExpertModalLabel">
-                    分配评委：{{ article_obj.article_num }}
+                <h4 class="modal-title" id="allotExpertModalLabel">分配评委：{{ article_obj.article_num }}
                     <input style="display: none" name="article_id" value="{{ article_obj.id }}">
                 </h4>
             </div>
