--- a/A_dbms/templates/dbms/meeting/modl/meeting-add-mod.html
+++ b/A_dbms/templates/dbms/meeting/modl/meeting-add-mod.html
@@ -3,13 +3,10 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close"
-                        data-dismiss="modal" aria-label="Close">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
-                <h4 class="modal-title" id="addMeetingModalLabel">
-                    添加评审会
-                </h4>
+                <h4 class="modal-title" id="addMeetingModalLabel">添加评审会</h4>
             </div>
             <div class="modal-body">
 
@@ -19,14 +16,8 @@
 
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default"
-                        data-dismiss="modal">
-                    取消
-                </button>
-                <button type="button" class="btn btn-primary"
-                        id="addMeetingModalOk">
-                    添加
-                </button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                <button type="button" class="btn btn-primary" id="addMeetingModalOk">添加</button>
             </div>
         </div>
     </div>
