--- a/A_dbms/templates/dbms/meeting/modl/meeting-article-add-mod.html
+++ b/A_dbms/templates/dbms/meeting/modl/meeting-article-add-mod.html
@@ -3,32 +3,21 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close"
-                        data-dismiss="modal" aria-label="Close">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
-                <h4 class="modal-title" id="addMeetingArticleModalLabel">
-                    添加参评项目
-                    <input style="display: none" name="meeting_id"
-                           value="{{ meeting_obj.id }}">
+                <h4 class="modal-title" id="addMeetingArticleModalLabel">添加参评项目
+                    <input style="display: none" name="meeting_id" value="{{ meeting_obj.id }}">
                 </h4>
             </div>
             <div class="modal-body">
-
                 <form class="form-horizontal">
                     {% include 'dbms/meeting/modl/mod_form/meeting-ariticle-add.html' %}
                 </form>
-
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default"
-                        data-dismiss="modal">
-                    取消
-                </button>
-                <button type="button" class="btn btn-primary"
-                        id="addMeetingArticleModalOk">
-                    添加
-                </button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                <button type="button" class="btn btn-primary" id="addMeetingArticleModalOk">添加</button>
             </div>
         </div>
     </div>
