--- a/A_dbms/templates/dbms/provide/notify/tab/notify-provide.html
+++ b/A_dbms/templates/dbms/provide/notify/tab/notify-provide.html
@@ -1,7 +1,5 @@
 <div class="table-responsive">
-    {#"table-responsive":表格响应式布局#}
-    <table class="table table-bordered table-hover
-                table-condensed active">
+    <table class="table table-bordered table-hover table-condensed active">
         <thead>
         <tr style="text-align: center">
             <th>放款种类</th>
