--- a/A_dbms/templates/dbms/warrant/modl/guaranty-del-mod.html
+++ b/A_dbms/templates/dbms/warrant/modl/guaranty-del-mod.html
@@ -3,26 +3,15 @@
     <div class="modal-dialog modal-sm" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title" id="delMeetingArticleModalLabel">
-                    删除他权与权证对应关系
-                    <input style="display: none" name="warrant_id"
-                           value="{{ warrant_obj.id }}">
-                    <input style="display: none" name="guaranty_id"
-                           id="delGuarantyId">
+                <h4 class="modal-title" id="delMeetingArticleModalLabel">删除他权与权证对应关系
+                    <input style="display: none" name="warrant_id" value="{{ warrant_obj.id }}">
+                    <input style="display: none" name="guaranty_id" id="delGuarantyId">
                 </h4>
             </div>
-            <div class="modal-body">
-                是否确定删除该抵押物的他权对应关系!!!!
-            </div>
+            <div class="modal-body">是否确定删除该抵押物的他权对应关系!!!</div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default"
-                        data-dismiss="modal">
-                    取消
-                </button>
-                <button type="button" class="btn btn-primary"
-                        id="delGuarantyModalOk">
-                    确定
-                </button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                <button type="button" class="btn btn-primary" id="delGuarantyModalOk">确定</button>
             </div>
         </div>
     </div>
