--- a/A_dbms/templates/dbms/warrant/modl/owership-add-mod.html
+++ b/A_dbms/templates/dbms/warrant/modl/owership-add-mod.html
@@ -3,14 +3,11 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close"
-                        data-dismiss="modal" aria-label="Close">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
-                <h4 class="modal-title" id="addOwerShipModalLabel">
-                    添加产权证
-                    <input style="display: none" name="warrant_id"
-                           id="id_warrant_id" value={{ warrant_obj.id }}>
+                <h4 class="modal-title" id="addOwerShipModalLabel">添加产权证
+                    <input style="display: none" name="warrant_id" id="id_warrant_id" value={{ warrant_obj.id }}>
                 </h4>
             </div>
             <div class="modal-body">
@@ -19,16 +16,9 @@
                 </form>
             </div>
             <label id="formErrors"></label>
-
             <div class="modal-footer">
-                <button type="button" class="btn btn-default"
-                        data-dismiss="modal">
-                    取消
-                </button>
-                <button type="button" class="btn btn-primary"
-                        id="addOwerShipModalOk">
-                    添加
-                </button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                <button type="button" class="btn btn-primary" id="addOwerShipModalOk">添加</button>
             </div>
         </div>
     </div>
