--- a/A_dbms/templates/dbms/warrant/modl/owership-del-mod.html
+++ b/A_dbms/templates/dbms/warrant/modl/owership-del-mod.html
@@ -3,26 +3,15 @@
     <div class="modal-dialog modal-sm" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title" id="delOwershipModalLabel">
-                    删除产权证
-                    <input style="display: none" name="warrant_id"
-                           id="id_warrant_id" value={{ warrant_obj.id }}>
-                    <input style="display: none" name="owership_id"
-                           id="delOwershipModalId">
+                <h4 class="modal-title" id="delOwershipModalLabel">删除产权证
+                    <input style="display: none" name="warrant_id" id="id_warrant_id" value={{ warrant_obj.id }}>
+                    <input style="display: none" name="owership_id" id="delOwershipModalId">
                 </h4>
             </div>
-            <div class="modal-body">
-                是否确定删除权证信息!!!!
-            </div>
+            <div class="modal-body">是否确定删除权证信息!!!</div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default"
-                        data-dismiss="modal">
-                    取消
-                </button>
-                <button type="button" class="btn btn-primary"
-                        id="delOwershipModalOk">
-                    删除
-                </button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                <button type="button" class="btn btn-primary" id="delOwershipModalOk">删除</button>
             </div>
         </div>
     </div>
