--- a/A_dbms/templates/dbms/warrant/modl/warrant-del-mod.html
+++ b/A_dbms/templates/dbms/warrant/modl/warrant-del-mod.html
@@ -3,24 +3,14 @@
     <div class="modal-dialog modal-sm" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title" id="delWarrantModalLabel">
-                    删除产权
-                    <input style="display: none" name="warrant_id"
-                           id="id_warrant_id" value={{ warrant_obj.id }}>
+                <h4 class="modal-title" id="delWarrantModalLabel">删除产权
+                    <input style="display: none" name="warrant_id" id="id_warrant_id" value={{ warrant_obj.id }}>
                 </h4>
             </div>
-            <div class="modal-body">
-                是否确定删除权证!!!!
-            </div>
+            <div class="modal-body">是否确定删除权证!!!</div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default"
-                        data-dismiss="modal">
-                    取消
-                </button>
-                <button type="button" class="btn btn-primary"
-                        id="delWarrantModalOk">
-                    确定
-                </button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                <button type="button" class="btn btn-primary" id="delWarrantModalOk">确定</button>
             </div>
         </div>
     </div>
