--- a/A_dbms/templates/dbms/warrant/scan/warrant-summry.html
+++ b/A_dbms/templates/dbms/warrant/scan/warrant-summry.html
@@ -2,27 +2,15 @@
     <div class="panel-heading">
         <label>产权情况</label>
         <label class="navbar-right">
-            {% if warrant_typ == 9 %}
-                <a class="btn btn-primary btn-sm " id="addGuarantyB">
-                    添加抵押物
-                </a><!--#path('warrant/storages/'-->
+            {% if warrant_typ == 99 %}
+                <a class="btn btn-primary btn-sm " id="addGuarantyB">添加抵押物</a><!--#path('warrant/storages/'-->
             {% elif warrant_typ in house_ground_list %}
-                <a class="btn btn-primary btn-sm " id="addOwerShip">
-                    添加产权证
-                </a><!--#path('warrant/storages/'-->
-                <a class="btn btn-primary btn-sm " id="addEvaluateB">
-                    评估
-                </a><!--#path('warrant/evaluate/'-->
+                <a class="btn btn-primary btn-sm " id="addOwerShip">添加产权证</a><!--#path('warrant/storages/'-->
+                <a class="btn btn-primary btn-sm " id="addEvaluateB">评估</a><!--#path('warrant/evaluate/'-->
             {% endif %}
-            <a class="btn btn-primary btn-sm " id="editWarrant">
-                修改
-            </a><!--#path('warrant/edit/'-->
-            <a class="btn btn-primary btn-sm " id="addStoragesB">
-                出入库
-            </a><!--#path('warrant/storages/'-->
-            <a class="btn btn-danger btn-sm " id="delWarrant">
-                删除
-            </a><!--#path('warrant/del/'-->
+            <a class="btn btn-primary btn-sm " id="editWarrant">修改</a><!--#path('warrant/edit/'-->
+            <a class="btn btn-primary btn-sm " id="addStoragesB">出入库</a><!--#path('warrant/storages/'-->
+            <a class="btn btn-danger btn-sm " id="delWarrant">删除</a><!--#path('warrant/del/'-->
         </label>
     </div>
 
@@ -31,7 +19,7 @@
             {% include 'dbms/warrant/scan/warrant-summry-house.html' %}
         {% elif  warrant_typ == 2 %}
             {% include 'dbms/warrant/scan/warrant-summry-ground.html' %}
-        {% elif  warrant_typ == 9 %}
+        {% elif  warrant_typ == 99 %}
             {% include 'dbms/warrant/scan/warrant-summry-hypothec.html' %}
         {% else %}
 
