--- a/A_dbms/templates/dbms/warrant/warrant/warrant-table.html
+++ b/A_dbms/templates/dbms/warrant/warrant/warrant-table.html
@@ -1,11 +1,5 @@
 <div class="table-responsive">
-    {#"table-responsive":表格响应式布局#}
-    <table class="table table-bordered table-hover
-                table-condensed active">
-        {#"table-bordered":表格表格边框#}
-        {#"table-hover":表格悬停变色#}
-        {#"table-condensed":表格紧缩#}
-        {#<caption><h4>项目管理</h4></caption>#}
+    <table class="table table-bordered table-hover table-condensed active">
         <thead>
         <tr style="text-align: center">
             <th>权证编号</th>
@@ -18,9 +12,7 @@
         {% for warrant in warrant_list %}
             <tr>
                 <td>
-                    <a href="{% url 'dbms:warrant_scan' warrant_id=warrant.id %}">
-                        {{ warrant.warrant_num }}
-                    </a>
+                    <a href="{% url 'dbms:warrant_scan' warrant_id=warrant.id %}">{{ warrant.warrant_num }}</a>
                 </td>
                 <td>{{ warrant.get_warrant_typ_display }}</td>
                 <td>
